<package format="2">
  <name>sim_sample_prediction_ros_tool</name>
  <version>1.0.0</version>
  <description>Sample prediction module for a vehicle in the simulation framework.</description>

  <license>BSD</license>
  <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>
  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <depend>automated_driving_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>rosparam_handler</depend>
  <depend>tf2_ros</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" /><!-- Other tools can request additional information be placed here -->
  </export>
</package>
